# bubble-duck

bubble-duck-client/: README.md  package-lock.json  package.json
bubble-duck-client/public/: index.html  manifest.json
bubble-duck-client/src/: App.js  index.js
bubble-duck-client/src/components/: common.js  confirmProducts.js  debug.js  getRecommendations.js  getSchedule.js  header.js  landingPage.js  photoUpload.js  skincareQuiz.js
bubble-duck-client/src/redux/: quizSlice.js  responsesSlice.js  store.js
bubble-duck-client/src/styles/: components.css  main.css
bubble-duck-client/src/utils/: loadingBar.js  responseHelpers.js
bubble-duck-server/: README.md  app.py  assistant.py  ingredients.py  products.json  products.py  pyproject.toml  updated_products.json
bubble-duck-server/database/: create_database.sql  create_tables.sql  data.sql
bubble-duck-server/myenv/: pyvenv.cfg
bubble-duck-server/myenv/Scripts/: activate  activate.bat
