[tool.poetry]
name = "bubble-duck-server"
version = "0.1.0"
description = ""
authors = ["Rachel Maley <rachelcmaley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
openai = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
